--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,16 @@
   text-align: center;
   height: 88vh;
 }
+h3 {
+  font-family: 'Red Hat Display';
+  font-size: 2.75rem;
+  font-weight: 100;
+  padding-top: 15%;
+  text-align: center;
+}
+@media (min-width: 1200px){
+  h3 {
+    font-size: 3.75rem !important;
+    padding-top: 6%;
+  }
+}
