--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 h3 {
   font-family: 'Red Hat Display';
   font-size: 2.75rem;
-  font-weight: 100;
+  font-weight: 100 !important;
   padding-top: 15%;
   text-align: center;
 }
