--- a/src/assets/components/Header/Header.css
+++ b/src/assets/components/Header/Header.css
@@ -2,12 +2,11 @@
     background-color: #4B4B4B;
     color: white;
     display: flex;
-    /* position: sticky; */
     z-index: 10;
     height: 12vh;
     font-size: 14px;
     padding: 0 11% !important;
-    position: fixed;
+    position: sticky !important;
     width: 100%;
     top: 0;
 }
