--- a/src/assets/components/About/Atelier.css
+++ b/src/assets/components/About/Atelier.css
@@ -2,11 +2,15 @@
     width: 90vw;
     margin: 15% 5% 0;
 }
-
+.portland {
+    
+    padding: 8% 10% 0;
+    font-family: 'Red Hat Display';
+    font-size: 14px;
+}
 .mapContainer {
     width: 90vw;
     height: 180px;
-    
     margin: 15% auto;
     border-radius: 20px;
 }
@@ -14,7 +18,7 @@
 @media (min-width:1280px) {
     .atelierImg {
         margin: auto;    
-        width: 50vw;
+        width: 52vw;
         margin: 6% 24% 0;
     }
     .mapContainer {
@@ -22,5 +26,11 @@
         width: 50vw;
         margin: 5% auto;
         border-radius: 25px;
+        padding-bottom: 10%;
+    }
+    .portland {
+        padding: 5% 24% 0;
+        font-family: 'Red Hat Display';
+        font-size: 20px;
     }
 }
