--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 h3 {
   font-family: 'Red Hat Display';
-  font-size: 2.75rem;
+  font-size: 2rem !important;
   font-weight: 100 !important;
   padding-top: 15%;
   text-align: center;
