--- a/src/assets/components/About/About.css
+++ b/src/assets/components/About/About.css
@@ -10,12 +10,10 @@ h1 {
 
 .curriculum, .awards, .statement {
     margin: auto 4%;
-    font-size: 12px;
     color: hsl(228, 12%, 48%);
     font-family: 'Red Hat Display';
 }
 .statement{
-    font-size: 13px;
     padding: 8%;
     padding-bottom: 25%;
 }
@@ -29,7 +27,6 @@ h1 {
     margin: auto;
 }
 .awards {
-    font-size: 14px;
     width: 80vw;
     margin: auto;
 }
@@ -88,5 +85,8 @@ h1 {
     }
     .awards h2 {
         padding: 3% 1%;
+    }
+    .awards {
+        padding-right: 18%;
     }
 }
