--- a/src/assets/components/About/Atelier.css
+++ b/src/assets/components/About/Atelier.css
@@ -3,7 +3,7 @@
     margin: 15% 5% 0;
 }
 .portland {
-    
+    margin-bottom: 0;
     padding: 8% 10% 0;
     font-family: 'Red Hat Display';
     font-size: 14px;
@@ -18,7 +18,7 @@
 @media (min-width:1280px) {
     .atelierImg {
         margin: auto;    
-        width: 52vw;
+        width: 52%;
         margin: 6% 24% 0;
     }
     .mapContainer {
