--- a/src/assets/components/Header/Header.css
+++ b/src/assets/components/Header/Header.css
@@ -78,6 +78,7 @@
     font-size: 16px;
     font-family: 'Red Hat Display';
     font-weight: 100;
+    margin-bottom: 3px;
 }
 
 @media (min-width: 614px) {
@@ -113,6 +114,7 @@
     .navDropdownItem {
         font-weight: 200;
         font-size: 18px;
+        margin-bottom: 5px;
     }
     .burgerMenu {
         height: 50px;
