--- a/src/assets/components/Footer/Footer.css
+++ b/src/assets/components/Footer/Footer.css
@@ -4,7 +4,7 @@
     justify-content: space-around;
     background-color: #4B4B4B;
     color: white;
-    height: 23vh;
+    height: 165px;
     font-weight: 100;
     font-size: small;
     align-items: flex-start;
