--- a/src/assets/components/About/News.css
+++ b/src/assets/components/About/News.css
@@ -35,7 +35,7 @@ a{
     text-align: left;
     padding-top: 1%;
     color: black;
-    font-family: 'Red Hat Display';
+    font-family: 'Red Hat Display Variable', sans-serif;
     font-size: 13px;
 }
 .prensaTextVideo {
