--- a/src/assets/components/About/NewsDetail.css
+++ b/src/assets/components/About/NewsDetail.css
@@ -12,7 +12,7 @@
     padding: 5% 0;
 }
 .prensaTextDetail{
-    font-family: 'red hat display';
+    font-family: 'Red Hat Display Variable', sans-serif;
     font-size: 23px;
     font-weight: 800;
 }
