--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   height: 88vh;
 }
 h3 {
-  font-family: 'Red Hat Display';
+  font-family: 'Red Hat Display Variable', sans-serif;
   font-size: 2rem !important;
   font-weight: 100 !important;
   padding-top: 15%;
