--- a/src/assets/components/About/Atelier.css
+++ b/src/assets/components/About/Atelier.css
@@ -5,7 +5,7 @@
 .portland {
     margin-bottom: 0;
     padding: 8% 10% 0;
-    font-family: 'Red Hat Display';
+    font-family: 'Red Hat Display Variable', sans-serif;
     font-size: 14px;
 }
 .mapContainer {
@@ -18,7 +18,7 @@
     font-weight: 500;
     text-align: center;
     margin: 12% 0 5%;
-    font-family: 'Red Hat Display';
+    font-family: 'Red Hat Display Variable', sans-serif;
     color: black;
 }
 .contactMe:hover{
@@ -39,7 +39,7 @@
     }
     .portland {
         padding: 5% 24% 0;
-        font-family: 'Red Hat Display';
+        font-family: 'Red Hat Display Variable', sans-serif;
         font-size: 20px;
     }
     .contactMe {
